@@ -4,6 +4,7 @@ Changelog
 1.0 - (Unreleased)
 ------------------
 
+ * removed frontpage properties from profile, properties are now managed via zmi [demarant]
  * Update atct_album_view macro in order to be used with eea.dataservice fancybox [voineali, #2924]
 
 0.9 - (2010-02-22)
